# axiom-alpha-engine

./: .gitignore  README.md  pyproject.toml
artifacts/day05/day05_report_v1/: DAY05_FINDINGS.md  analysis_metadata.json
artifacts/day05/dependence_v1/: analysis_metadata.json
artifacts/day05/eda_v1/: analysis_metadata.json
artifacts/day05/event_bar_diagnostics_v1/: analysis_metadata.json
artifacts/day05/stylized_facts_v1/: analysis_metadata.json
artifacts/day05/volatility_seasonality_v1/: analysis_metadata.json
artifacts/day06/trend_ratio_baseline_v1/: annual_exposure.csv  (+4 more)
config/: base.yaml
docs/: DECISIONS.md
scripts/: build_sample_event_bars.py  download_development_bars.py  download_sample_bars.py  download_sample_microstructure.py  process_sample_bars.py  reconcile_sample_daily.py  run_dependence_diagnostics.py  run_development_eda.py  run_event_bar_diagnostics.py  run_stylized_facts.py  run_trend_ratio_baseline.py  run_volatility_seasonality.py
src/cqf_al/: __init__.py
tests/analysis/: test_day05_report.py  test_day06_trend_baseline.py  test_dependence_diagnostics.py  test_eda_features.py  test_event_bar_diagnostics.py  test_strategy_performance.py  test_stylized_facts.py  test_volatility_seasonality.py
tests/data/: test_alpaca_microstructure.py  test_alpaca_provider.py  test_config_loader.py  test_development_dataset.py  test_event_bars.py  test_external_reconciliation.py  test_local_store.py  test_resampling.py  test_sample_windows.py  test_schemas.py  test_validators.py  test_yahoo_provider.py
tests/strategies/: test_trend_ratio.py
(+46 files in other folders)
